--- a/gazebo_plugins/CMakeLists.txt
+++ b/gazebo_plugins/CMakeLists.txt
@@ -473,7 +473,7 @@ ament_export_dependencies(gazebo_msgs)
 ament_export_dependencies(gazebo_ros)
 
 if(BUILD_TESTING)
-  add_subdirectory(test)
+  # add_subdirectory(test)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
 endif()
